--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,7 +20,7 @@
 				      <button type="submit" class="btn btn-default">検索</button>
 		      	</form>
           </li>
-          <li><a href="#">Signup</a></li>
+          <li><%= link_to 'Signup', signup_path %></li>
           <li><a href="#">Login</a></li>
         </ul>
       </div>
