--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -4,7 +4,7 @@
       <div class="cover-contents">
         <h1>好きな音楽を手元に。</h1>
           <% unless logged_in? %>
-            <%= link_to 'Physicalistを始める', signup_path, class: 'btn btn-primary btn-lg' %>
+            <%= link_to 'PhysicaListを始める', signup_path, class: 'btn btn-primary btn-lg' %>
           <% end %>
       </div>
     </div>
