--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer>
-  <div class="text-center text-muted">©︎2017 Physicalist.</div>
+  <div class="text-center text-muted">©︎2017 PhysicaList.</div>
 </footer>
