--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,19 +8,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Physicalist</a>
+        <a class="navbar-brand" href="/">PhysicaList</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
-            <li>
-              <form class="navbar-form navbar-left" role="search">
-  				      <div class="form-group">
-  					     <input type="text" class="form-control" placeholder="作品名、アーティスト名">
-  				      </div>
-  				      <button type="submit" class="btn btn-default">Search</button>
-  		      	</form>
-            </li>
             <li class="dropdpwn">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span class="gravator">
@@ -47,4 +39,16 @@
       </div>
     </div>
   </nav>
+  <% if logged_in? %>
+    <div class="search-bar">
+      <%= form_tag(new_item_path, method: :get, class: 'form-inline') do %>
+        <div class="input-group">
+          <%= text_field_tag :keyword, @keyword, class: 'form-control', placeholder: 'アーティスト名、作品名' %>
+          <span class="input-group-btn">
+            <%= submit_tag 'Search', class: 'btn btn-default' %>
+          </span>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
 </header>
