--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,8 +24,8 @@
             <%= f.text_field :password_confirmation, class: 'form-control' %>
           </div>
           
-          <div class="text-center">
-            <%= f.submit '登録', class: 'btn btn-primary ' %>
+          <div class="form-group">
+            <%= f.submit '登録', class: 'btn btn-primary ' 'form-control' %>
           </div>
         <% end %>
       </div>
