--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,11 +23,11 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <%= link_to 'マイページ', user_path(current_user) %>
+                  <%= link_to 'My Page', user_path(current_user) %>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li>
-                  <%= link_to 'ログアウト', logout_path, method: :delete %>
+                  <%= link_to 'Logout', logout_path, method: :delete %>
                 </li>
               </ul>
             </li>
